350-jellyfin/30-jellyfin-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  labels:
    app: jellyfin
    kubernetes.io/name: "jellyfin"
spec:
  selector:
    app: jellyfin
  ports:
    - name: jellyfin
      protocol: TCP
      port: 8096
      targetPort: 8096
